# notedeck

./: Cargo.toml  maintainers.yaml
.github/workflows/: build-and-test.yml  nip-34.yml  rust.yml
crates/enostr/: Cargo.toml
crates/enostr/src/: lib.rs  main.rs
crates/notedeck_columns/src/: lib.rs  media_upload.rs  post.rs
crates/notedeck_columns/src/timeline/: kind.rs  mod.rs
crates/notedeck_columns/src/ui/: side_panel.rs
crates/notedeck_columns/src/ui/search/: mod.rs
crates/notedeck_ui/src/note/: contents.rs
